# microcar

./: .gitignore  Cargo.toml  HANDOFF.md  README.md  build.rs
.github/workflows/: microcar.yml
benches/: bench_main.rs
common/include/: microcar_can.h  microcar_protocol.h  microcar_safety.h  microcar_trace.h
common/src/: microcar_protocol.c
docs/: architecture.md  costar_requirements.md  dogfood_implementation_plan.md  message_protocol.md  safety_rules.md  scenario_format.md  scheduler_realism_plan.md
examples/: boot_test.rs  diag.rs  show_trace.rs
expected/traces/: ble_hci_demo.trace  block_read_write.trace  (+18 more)
firmware/: microcar_coordinator.c  microcar_zephyr_boot.c
plant/: Cargo.toml
scenarios/: asymmetric_ticks.toml  ble_hci_demo.toml  block_read_write.toml  bms_overtemp_limp_mode.toml  boot_and_heartbeat.toml  brake_overrides_throttle.toml  can_burst_preempt.toml  critical_bms_shutdown.toml  dashboard_reboot.toml  delayed_bms_fault_message.toml  dropped_vehicle_mode_frame.toml  ecu_reboot.toml  eth_ping_pong.toml  event_group_mode.toml  fleet_of_16.toml  fleet_of_64.toml  fleet_of_8.toml  gateway_reboot.toml  lifecycle_stress.toml  long_drive_10min.toml  lost_bms_heartbeat.toml  mixed_rtos_boot.toml  multitask_priority.toml  mutex_fault_queue.toml  normal_drive_cycle.toml  overnight_8hour.toml  priority_inversion.toml  soak_1hour.toml  software_timer_watchdog.toml  task_lifecycle.toml  uart_chain.toml
src/: lib.rs  main.rs
state_tests/: Cargo.toml
tests/: check_assertions.py  check_trace.py  run_all.sh  run_one.sh  verify_determinism.sh
(+48 files in other folders)
